feature: implementando builders student e subject, criação de endpoints e configurações internas